--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,13 @@
 
 body {
     color: hsl(238, 29%, 16%);
+    font-size: 12px;
+    font-family: 'Kumbh Sans', sans-serif;
     background: linear-gradient(hsl(273, 75%, 66%),hsl(240, 73%, 65%));
     background-size: cover;
     background-repeat: no-repeat;
-    font-size: 12px;
-    font-family: 'Kumbh Sans', sans-serif;
 }
+
 
 div.container {
     background-image: url(../images/bg-pattern-desktop.svg);
@@ -42,8 +43,14 @@ ul {
     list-style: none;
 }
 
-ul > li {
+ul  li {
     margin: 10px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+div.question {
+    width: 270px;
 }
 
 p {
@@ -53,4 +60,41 @@ p {
 hr {
     color: hsl(240, 5%, 91%);
 }
+
+i {
+    color: hsl(14, 88%, 65%);
+    margin-left: 30px;
+}
+
+.icon-up {
+    display: none;
+}
+
+li:hover {
+    color: hsl(14, 88%, 65%);
+    cursor: pointer;
+}
+
+
+
+/* SHOW AND HIDE ANSWERS */
+
+.show-text .question-text{
+    display: block;
+    margin-bottom: 10px;
+    max-width: 90%;
+}
+
+.show-text .question-title {
+    font-weight: bold;
+}
+
+.show-text .icon-up {
+    display: block;
+}
+
+.show-text .icon-down {
+    display: none;
+}
+
 
