--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,8 @@
 
 body {
     color: hsl(238, 29%, 16%);
+    width: 100%;
+    height: 100vh;
     font-size: 12px;
     font-family: 'Kumbh Sans', sans-serif;
     background: linear-gradient(hsl(273, 75%, 66%),hsl(240, 73%, 65%));
@@ -65,6 +67,11 @@ i {
     color: hsl(14, 88%, 65%);
     margin-left: 30px;
 }
+ button {
+     background-color: transparent;
+     border: none;
+     
+ }
 
 .icon-up {
     display: none;
