--- a/src/style.css
+++ b/src/style.css
@@ -114,3 +114,52 @@ a {
 }
 
 
+/* MEDIA QUERIES */
+
+/* phones */
+
+@media (max-width: 600px){
+
+}
+
+/* tablets */
+
+@media only screen and (max-width: 600px){
+    body {
+        width: 100%;
+        height: 200vh;
+        
+    }
+    div.container {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        width: 300px;
+        margin-top: 20px;
+        background-size: 65%;
+        background-repeat: no-repeat;
+        background-position: 55px 20px;
+        border-radius: 20px;
+        box-shadow: 0px 15px 80px rgb(37, 34, 34);
+    }
+
+    div > p {
+        text-align: left;
+    }
+
+    h2 {
+        font-size: 25px;
+        margin-top: 50px;
+    }
+
+    img#woman {
+        width: 200px;
+        height: 150px;
+        position: static;
+    }
+
+    
+    
+}
+
+
