--- a/src/style.css
+++ b/src/style.css
@@ -41,11 +41,8 @@ h2 {
     margin: 20px auto;
 }
 
-ul {
-    list-style: none;
-}
 
-ul  li {
+div.question-title {
     margin: 10px auto;
     display: flex;
     justify-content: space-between;
@@ -67,18 +64,22 @@ i {
     color: hsl(14, 88%, 65%);
     margin-left: 30px;
 }
- button {
+
+button {
      background-color: transparent;
      border: none;
-     
  }
 
 .icon-up {
     display: none;
 }
 
-li:hover {
+div.question-title:hover {
     color: hsl(14, 88%, 65%);
+    cursor: pointer;
+}
+
+button:hover {
     cursor: pointer;
 }
 
@@ -116,13 +117,7 @@ a {
 
 /* MEDIA QUERIES */
 
-/* phones */
 
-@media (max-width: 600px){
-
-}
-
-/* tablets */
 
 @media only screen and (max-width: 600px){
     body {
